# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.310 2005/07/27 19:17:18 wolf31o2 Exp $

  27 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd/files/Getting_Online.txt, +livecd/files/README.txt:
  Forward port README.txt and Getting_Online.txt files from catalyst
  1.1.10.8's release.

  22 Jul 2005; Eric Edgar <rocket@gentoo.org> targets/support/rc-update.sh:
  Add automatic creation/deletion of runlevels based on rcadd rcdel

  19 Jul 2005; Eric Edgar <rocket@gentoo.org> modules/grp_target.py:
  Fix grp so that grp/use is not required anymore

  12 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/isolinux-2.11-cdtar.tar.bz2,
  -livecd/cdtar/isolinux-2.11-memtest86+-cdtar.tar.bz2,
  -livecd/cdtar/isolinux-2.13-cdtar.tar.bz2,
  -livecd/cdtar/isolinux-2.13-memtest86+-cdtar.tar.bz2,
  +livecd/cdtar/isolinux-3.09-cdtar.tar.bz2,
  +livecd/cdtar/isolinux-3.09-memtest86+-cdtar.tar.bz2:
  Updated x86/amd64 isolinux cdtar to 3.09 and removing older versions, as
  they are known to cause booting problems.

  08 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/livecd-bashrc, targets/support/livecdfs-update.sh:
  Fixing sed line for startx to auto-start X. Thanks to Christophe PEREZ
  <christophe.perez@novazur.com> on the gentoo-catalyst mailing list for
  finding this bug.

  08 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  Fixed quoting in stage1 profile check.

  07 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage3/stage3-chroot.sh:
  Fixing USE for stage3.

  07 Jul 2005; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py,
  targets/support/chroot-functions.sh:
  Fix FETCH code so it will run for Pylon

  07 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org> modules/grp_target.py,
  targets/grp/grp-chroot.sh:
  Fix bindist invcation.

  07 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org>